# aoc2022

./: .gitignore  Cargo.toml  README.md  app-5d30ec368f650ab1.js  app-5d30ec368f650ab1_bg.wasm  app-8c1ebb0288fc438f.js  app-8c1ebb0288fc438f_bg.wasm  app-90508e66ad17ea11.js  app-90508e66ad17ea11_bg.wasm  app-974e0df6a6073170.js  app-974e0df6a6073170_bg.wasm  index.html  manifest.json  sw.js
.github/workflows/: pages.yml  rust.yml
app/: Cargo.toml
app/src/: main.rs
assets/: manifest.json
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs  mod_day10.rs
day11/: Cargo.toml
day11/src/: main.rs  mod_day11.rs
day12/: Cargo.toml  index.html
day12/assets/: manifest.json  sw.js
day12/src/: app.rs  lib.rs  main.rs  mod_day12.rs  old_main.rs
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs  mod_day5.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: input.txt  main.rs  mod_day7.rs
day8/: Cargo.toml
day8/src/: main.rs  mod_day8.rs
day9/: Cargo.toml
day9/src/: main.rs
