[package]
name = "day12"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
egui = "0.28"
eframe = "0.28"
rfd = "0.14"
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4"

# [profile.release]
# opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2